--- a/locale/ja/LC_MESSAGES/CONTRIBUTING.po
+++ b/locale/ja/LC_MESSAGES/CONTRIBUTING.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Scientific Python Lectures package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2024.2rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-27 19:13+0000\n"
+"POT-Creation-Date: 2024-11-27 19:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2024\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +23,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/CONTRIBUTING.rst:2
 msgid "Contributing"
-msgstr ""
+msgstr "貢献"
 
 #: ../../scientific-python-lectures/CONTRIBUTING.rst:4
 msgid ""
@@ -32,7 +36,7 @@ msgstr ""
 msgid ""
 "To propose bugfixes or straightforward improvements to the lectures, see the"
 " contribution guide below."
-msgstr ""
+msgstr "講義のバグフィックスや簡単な改良を提案するには、以下の投稿ガイドをご覧ください。"
 
 #: ../../scientific-python-lectures/CONTRIBUTING.rst:11
 msgid ""
