--- a/locale/ja/LC_MESSAGES/LICENSE.po
+++ b/locale/ja/LC_MESSAGES/LICENSE.po
@@ -3,13 +3,17 @@
 # This file is distributed under the same license as the Scientific Python Lectures package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2024.2rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-27 19:13+0000\n"
+"POT-Creation-Date: 2024-11-27 19:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2024\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,24 +23,24 @@ msgstr ""
 
 #: ../../scientific-python-lectures/LICENSE.rst:2
 msgid "License"
-msgstr ""
+msgstr "ライセンス"
 
 #: ../../scientific-python-lectures/LICENSE.rst:4
 msgid "All code and material is licensed under a"
-msgstr ""
+msgstr "すべてのコードと素材は以下のライセンスのもと公開されています"
 
 #: ../../scientific-python-lectures/LICENSE.rst:6
 msgid "Creative Commons Attribution 4.0 International License (CC-by)"
-msgstr ""
+msgstr "Creative Commons Attribution 4.0 International License (CC-by)"
 
 #: ../../scientific-python-lectures/LICENSE.rst:8
 msgid "https://creativecommons.org/licenses/by/4.0/"
-msgstr ""
+msgstr "https://creativecommons.org/licenses/by/4.0/"
 
 #: ../../scientific-python-lectures/LICENSE.rst:10
 msgid "See the AUTHORS.rst file for a list of contributors."
-msgstr ""
+msgstr "寄稿者のリストは AUTHORS.rst ファイルを参照してください。"
 
 #: ../../../../../../../tmp/<rst_epilog>:9
 msgid "|clear-floats|"
-msgstr ""
+msgstr "|clear-floats|"
